--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-loading": "^2.0.3",
+    "react-paginate": "^7.1.3",
     "react-pdf": "^5.3.0",
     "react-redux": "^7.1.0",
     "react-router": "^5.2.0",
@@ -62,5 +63,4 @@
     "postcss": "^7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.9"
   }
-
 }
